# minimal-transformer

./: .gitignore  .pre-commit-config.yaml  README.md  data_utils.py  pyproject.toml  train.py
config/: config.yaml
minimal_transformer/: __init__.py  dataset.py
minimal_transformer/datasets/: __init__.py  dataset.py
minimal_transformer/models/: __init__.py  model.py
minimal_transformer/trainers/: __init__.py  trainer.py
